--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ android/app/libs
 android/app/src/main/res/values/libs.xml
 android/app/src/main/assets/bundled
 
+# Visual Studio
+.vs/
+
 # VSCode
 # List taken from Github Global Ignores master@435c4d92
 # https://github.com/github/gitignore/commits/master/Global/VisualStudioCode.gitignore
